--- a/plot/notebook.ipynb
+++ b/plot/notebook.ipynb
@@ -58,7 +58,7 @@
     "    for i, axis in enumerate(axes):\n",
     "        plot_axis(i, f'Ось {axis}', ax[i], data)\n",
     "    plt.show()\n",
-    "    fig.savefig('result.png', bbox_inches='tight')"
+    "    fig.savefig('result.png', bbox_inches='tight', facecolor='white', transparent=False)"
    ]
   },
   {
